# Symulka-after-ZAD4

./: CMakeLists.txt  digital_simulation.sln  petla_glowna_scheme.graphml  seeds.txt
!HISTOGRAMY I WYKRESY/: opis.txt
!do_histogramow/generator_histograms/: example_TR.txt  example_ctp.txt  example_exp.txt  example_uniform.txt  example_zero_one.txt  generator_histograms.sln  generator_histograms.vcxproj  generator_histograms.vcxproj.filters  main.cpp
make/: ..sourcelog_file.txt  digital_simulation.vcxproj  digital_simulation.vcxproj.filters  log_file.txt
source/: Simulation.cpp  Simulation.h  channel.cpp  channel.h  generator.cpp  generator.h  logger.cpp  logger.h  main.cpp  packet.cpp  packet.h  process.cpp  process.h  rx.cpp  rx.h  seeds.txt  tx.cpp  tx.h  wireless_network.cpp  wireless_network.h
